--- a/package.json
+++ b/package.json
@@ -18,16 +18,16 @@
     "browser-sync": "^2.26.7",
     "browserify": "^13.0.0",
     "browserify-shim": "^3.8.12",
-    "cssnano": "^3.7.0",
+    "cssnano": "^4.1.10",
     "del": "^2.2.1",
     "event-stream": "^3.3.4",
     "git-rev-sync": "^1.6.0",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.2",
     "gulp-clean": "*",
     "gulp-concat": "^2.6.0",
-    "gulp-copy": "*",
-    "gulp-imagemin": "*",
-    "gulp-modernizr": "*",
+    "gulp-copy": "^4.0.1",
+    "gulp-imagemin": "^6.0.0",
+    "gulp-modernizr": "^3.3.0",
     "gulp-notify": "*",
     "gulp-postcss": "*",
     "gulp-rename": "*",
