- bumping some deps

--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "gulp-sass": "*",
     "gulp-sequence": "^0.4.6",
     "gulp-uglify": "*",
-    "jquery": "^3.4.1",
+    "jquery": "^3.5.0",
+    "lodash": ">=4.17.19",
     "merge-stream": "^1.0.0",
     "node.normalize.scss": "^3.0.3",
     "pubsub-js": "^1.5.3",
